# AUTO-BLOG-AGENT

./: .env.example  .gitignore  .replit  INSTRUKCJA_OBSLUGI_SYSTEMU.md  admin_auth.py  app.py  auth.py  config.py  dashboard.html  fix_html_artifacts.py  generate_missing_articles.py  generate_remaining.py  generate_test_article.py  generate_today_articles.py  generation_log.txt  main.py  migrate_topics.py  models.py  newsletter.py  patched_content_generator.py  publish_ready_articles.py  pyproject.toml  replit.md  replit_auth.py  routes.py  routes_ai_content.py  routes_analytics.py  routes_automation.py  routes_content_creator.py  routes_images.py  routes_monitoring.py  routes_multi_blog.py  routes_newsletter.py  routes_publishing.py  routes_scheduling.py  routes_seo.py  routes_seo_inspiration.py  routes_simple_creator.py  routes_simplified_content.py  routes_social.py  (+17 more)
attached_assets/: Pasted--1-Lista-prompt-w-i-szablon-w-prompt-w-AI-GPT-Claude-A-Tytu-Title-Prompt-Wygeneruj-chwy-1753354101943_1753354101944.txt  Pasted--Analiza-i-Szczeg-owy-Plan-Uproszczenia-Content-Creator-Bez-Zaburzania-Innych-Funkcji-Cel--1745597889608.txt  Pasted--Analiza-i-Szczeg-owy-Plan-Uproszczenia-Content-Creator-Bez-Zaburzania-Innych-Funkcji-Cel--1745597939981.txt  Pasted--Google-Images-API-API-uptime-99-998-Our-Google-Images-API-allows-you-to-scrape-results-from-th-1745653692644.txt  Pasted--Ile-s-w-i-znak-w-zawiera-4-strony-A4-tekstu-Przy-za-o-eniu-Czcionka-Times-New-Roman-lub-Ar-1753354790744_1753354790744.txt  Pasted--Jak-bezpiecznie-doda-dane-logowania-WordPress-Application-Passwords-do-agenta-w-Pythonie-1-Zas-1753363178471_1753363178472.txt  Pasted--Ocena-potrzeby-dost-pu-i-linkowania-do-funkcji-SOCIAL-MEDIA-FUNKCJA-PROMOCYJNA-przez-BlogAutom-1745531549151.txt  Pasted--Pe-na-Integracja-z-Twoimi-Danymi-API-Google-API-Key-AIzaSyAqIRfjsdiZrmDqap0Je8-YZPISawTsQSY-CSE-1745659649020.txt  Pasted--Prompt-Dog-bna-analiza-i-kompleksowa-naprawa-kluczowej-funkcji-agenta-AI-Generowanie-Artyku--1745569938461.txt  Pasted--Prompt-Generowanie-artyku-w-etapami-w-oparciu-o-tytu-y-i-tematyk-akapit-w-zamiast-liczby-s-w--1745541751073.txt  Pasted--Prompt-Naprawa-b-d-w-i-poprawa-UX-w-module-generowania-tre-ci-Regeneration-Settings-i-Content-1745571055307.txt  (+32 more)
generator/: content.py  seo.py  (+1 more)
(+175 files in other folders)
