[project]
name = "mastercontentai"
version = "1.0.0"
description = "MasterContentAI - AI Content Workflow Platform"
requires-python = ">=3.11"
dependencies = [
    # AI providers
    "anthropic>=0.50.0",
    "openai>=1.76.0",
    "tiktoken>=0.9.0",

    # Web framework
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",

    # Database
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",

    # Content / parsing
    "beautifulsoup4>=4.13.4",
    "trafilatura>=2.0.0",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "email-validator>=2.2.0",

    # Google services
    "google-analytics-data>=0.18.18",
    "google-api-python-client>=2.168.0",
    "google-auth>=2.39.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",

    # Trends / SEO
    "pytrends>=4.9.2",

    # Email
    "sendgrid>=6.11.0",

    # Scheduling / config
    "schedule>=1.2.2",
    "python-dotenv>=1.1.0",
]
